--- a/apps/GPSTrack/style.css
+++ b/apps/GPSTrack/style.css
@@ -1,6 +1,35 @@
 html, body, #mapDiv{
+	position: relative;
 	width  : 100%;
 	height : 100%;
 	padding: 0;
 	margin : 0;
+}
+
+#switch{
+	position: fixed;
+    bottom: 25px;
+    right: 110px;
+    text-align: justify;
+    z-index: 999;
+}
+
+#removeTrack{
+	position: fixed;
+    bottom: 25px;
+    right: 5px;
+    text-align: justify;
+    z-index: 1999;
+	color: white;
+	background-color: #515050;
+}
+
+.off{
+	color: white;
+	background-color: #515050;
+}
+
+.on{
+	color: white;
+	background-color: #158c5c;
 }
